--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo App</title>
+    <title>Restaurant Deals</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,12 +42,12 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="modal-title">Add New Todo</h4>
+            <h4 class="modal-title" id="modal-title">Add Restaurant Deal</h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <form id="form-add">
-              <label for="title">Todo Title</label>
+              <label for="title">Restaurant Name</label>
               <input id="title" type="text" class="form-control" name="" />
 
               <!-- New dropdown for selecting day of the week -->
